<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="main_activity_title">My Nanodegree Apps!</string>

    <string name="app_spotify_streamer">Spotify Streamer</string>
    <string name="app_football_scores">Football Scores</string>
    <string name="app_library">Library App</string>
    <string name="app_build_it_bigger">Build It Bigger</string>
    <string name="app_xyz_reader">XYZ Reader</string>
    <string name="app_capstone">Capstone</string>


</resources>
