<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tyagiabhinav.myappportfolio.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="21dp"
                android:gravity="center"
                android:text="@string/main_activity_title"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/spotifyBtn"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/appOrange"
                android:text="@string/app_spotify_streamer" />

            <Button
                android:id="@+id/footballScoreBtn"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/appOrange"
                android:text="@string/app_football_scores" />

            <Button
                android:id="@+id/libraryBtn"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/appOrange"
                android:text="@string/app_library" />

            <Button
                android:id="@+id/buildBiggerBtn"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/appOrange"
                android:text="@string/app_build_it_bigger" />

            <Button
                android:id="@+id/readerBtn"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/appOrange"
                android:text="@string/app_xyz_reader" />

            <Button
                android:id="@+id/capstoneBtn"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/appRed"
                android:text="@string/app_capstone" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
